tests/cases/nul-compile-fail-1.rs
use wchar::wch_c;

fn main() {
    wch_c!("fails \0 to compile");
}
